# ChangeLog for app-office/kmymoney
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney/ChangeLog,v 1.53 2014/06/22 18:01:30 kensington Exp $

*kmymoney-4.6.6 (22 Jun 2014)

  22 Jun 2014; Michael Palimaka <kensington@gentoo.org> +kmymoney-4.6.6.ebuild,
  -kmymoney-4.6.5.ebuild:
  Version bump. Remove broken version wrt bug #514192.

*kmymoney-4.6.5 (19 Jun 2014)

  19 Jun 2014; Manuel Rüger <mrueg@gentoo.org> +kmymoney-4.6.5.ebuild:
  Version bump.

  24 Dec 2013; Manuel Rüger <mrueg@gentoo.org>
  -files/kmymoney-4.6.2-gcc-4.7.patch, -files/kmymoney-4.6.3-gmp-5.1.0.patch,
  -kmymoney-4.6.3-r1.ebuild:
  Cleanup old.

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> kmymoney-4.6.4.ebuild:
  Stable for x86, wrt bug #492682

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> kmymoney-4.6.4.ebuild:
  amd64 stable, bug #492682

*kmymoney-4.6.4 (15 Oct 2013)

  15 Oct 2013; Johannes Huber <johu@gentoo.org> +kmymoney-4.6.4.ebuild:
  Version bump.

  14 Mar 2013; Michael Palimaka <kensington@gentoo.org> -kmymoney-4.6.3.ebuild:
  Remove old.

  10 Mar 2013; Agostino Sarubbo <ago@gentoo.org> kmymoney-4.6.3-r1.ebuild:
  Stable for x86, wrt bug #461070

  10 Mar 2013; Agostino Sarubbo <ago@gentoo.org> kmymoney-4.6.3-r1.ebuild:
  Stable for amd64, wrt bug #461070

*kmymoney-4.6.3-r1 (02 Feb 2013)

  02 Feb 2013; Michael Palimaka <kensington@gentoo.org>
  +files/kmymoney-4.6.3-gmp-5.1.0.patch, +kmymoney-4.6.3-r1.ebuild:
  Backport patch from upstream to fix build with gmp-5.1.0 wrt bug #448842.

  14 Nov 2012; Johannes Huber <johu@gentoo.org>
  -files/kmymoney-4.6.1-qt48.patch,
  -files/kmymoney-4.6.2-fix-parallel-build.patch,
  -files/kmymoney-4.6.2-sqlite-crash.patch, -kmymoney-4.6.2-r2.ebuild:
  Remove old.

  14 Nov 2012; Johannes Huber <johu@gentoo.org> kmymoney-4.6.3.ebuild:
  Stable for x86, wrt bug #438566

  18 Oct 2012; Agostino Sarubbo <ago@gentoo.org> kmymoney-4.6.3.ebuild: