@@ -3,25 +3,27 @@ Hash: SHA256
 
 DIST kmymoney-4.6.4.tar.xz 19917068 SHA256 89522fadb4a9f06f3f20e2d6ac47a147f70b4265abad2fdf3aa6672fe2a3c012 SHA512 1c390f7bd722344ed8f6a1ede76a20905e53cdfd27c74715ae95ae79bfa02ee6918b60b9ec198d5b26c2fd0af3b987db3cac0d02fcbfa69af95331f6d7e750dd WHIRLPOOL ad51eaaf351bf24df1e9ed8069d77eaa8f681fb500c0bace721d3aa2fe3d5949426cc1f057b2d8e376978d748ec4e52c9b5797c0536c5adb984e3e1d3ed2d95c
 DIST kmymoney-4.6.6.tar.xz 19991336 SHA256 2b9e70a157ce270ab337d981145b3a79aa4533c7daadcca426299dfcd0a9d06d SHA512 50d77dc6271d143d48c05868899b141bbbe7bc320308884dfd31f5a5fd042aaf648307b83ef215660ef77cd4e1bbc8011884421f395b3bb56d409415e5c15f3e WHIRLPOOL 988fdfe845f1409371b08d3db51582bd4b866c4ea33d1e1dce80cf310a4e8236efc97ffbb97f08cfc9bf95c936c42ec73388fabea2555d095ebfc7f2cfd01e6a
+DIST kmymoney-4.7.1.tar.xz 20152980 SHA256 7749cbae146eb4adf5c92162c841ae321f971c5720bc32d0227a42a4dd4acfc4 SHA512 e1abc00a39051d4797a177dda353af251dbc79dac97e4f4443df015f2f18f397672e59d6bf74baa6e94f18d4f26f1aea27cdffc37a1d1e46a146d22daed9fe7e WHIRLPOOL f2e698a39204338aeccd8d3d411f2d36a76a68a7b314a4ad47798a305c3432f5dd5c51d35616d8ebdefcbe6b92b55d6fcabf661067bcf2b2e401f51006b8df04
 EBUILD kmymoney-4.6.4.ebuild 1799 SHA256 c4ab26b39d0e478ea64482714f910cf5dfc8916acfbe7aa4895588c5014ee4eb SHA512 57a201e54a529478b6f15acb9b72e2d70ddb057c77caab73380924a73ea244f41804933f7d69524631fb3706bdb33035a9c44b266743ab8d63104c6324114fa7 WHIRLPOOL 5faa3e6aca683a9fd26a4a3a2bd5062fa1e777a689f1c41abf87c952d92551ef05ee1c52287d9fbc41189dc18d3c97727441d970984cdb059b2792575d399978
 EBUILD kmymoney-4.6.6.ebuild 1821 SHA256 b11b62169de36683b3d79c838ece2358f3ce9623b8c33ba948368cbafb600dce SHA512 bd5cb35f7d37d6111cd6dd3c4fb496b6c0b682aa7189c6a1d286634a1bbec294e704df06e90b75e88b72d90ae2b96b80348fb81f6bc68de636c03b2ab399bfe4 WHIRLPOOL cb0070ba460e655fcbd4f2e41467021720a52cf70af77b03902c7f7464798af15be306d8cd56f58214ae3289cea6439f16d4ce0aed69a0ae8e55067d91fa501d
-MISC ChangeLog 7799 SHA256 efa2db144da73d1c5c6e99dfcd3d8529701b09dbdd70828da08fdb5bad9f690a SHA512 c8fb9ba4978e4a7e6a243b7d80bdfc520eb0a18bcf7b9df93de68b7eb7ca7ed9e25f0dbb9b4476ec4f83b7d8ad31dba301ff1496952139d4744d922f35fd518d WHIRLPOOL 1b2e6886e1f7d434b1b4e1b7a2a6d9b5050681d7214e9b3b06ad0448e0e35e83e705c95963ca0d19decc38df46855758a6a967dacfc8d1011d34c233a3fad87a
+EBUILD kmymoney-4.7.1.ebuild 1632 SHA256 7484ef7427ea3476f4eef054c61e2afa1fe8c321d1e3fbe9ae42c42c9e570ae6 SHA512 6f5c069ffc34cb9585f875d3fd3e33dd17fc6d7c1933ac0f1f15871a9edcf8b35e5cc864f17ef41172f932e362318e7e7377c735b3d3d7b96c0c69a641f9a41d WHIRLPOOL 45b65729932869271310a991ea6349fb78850fadfdd4dcdea89056792499df6958a894ad9fa5f673a7b056eeace31de1c534ecec80016a658e19b705995542db
+MISC ChangeLog 7943 SHA256 f5bc7007d9ce0e9ec75c1c57e830d7be95d858daa056f4d02f7f31626975e56c SHA512 c247f0be9ff404bb3de3d0d8507805dcfbb6d6d87b8f5670e518b44fe8de158a454f0e39bfbcf0da108ff058b826303b62808b16d418c776f1547aeebf0b8a3a WHIRLPOOL cdbd0d742fef122e9c63fcb2a15158d88050d8ff96fbef639dccef209cbe2ce350c76ae6ce46d2e029622432a3bee539aa4b5b514b08e2ce4a8a94dd888c9830
 MISC metadata.xml 320 SHA256 4e8886432ea24978556c47629bc1dbab6d04fd8c2f5dba50b995bc6a95c2500f SHA512 d125d89769cbe6c3a1b3a661ae1c74977aa30cfc9c4a2ecd2f65548a5fc6ed6d69a1f87a71356d85819c1c3c05a225f0b3e669d25fdb2d6f1a61a1bb40494494 WHIRLPOOL 14d10a26d04fd59e46eeb122ee93dd42a97945b04a5f9c92f05cfc75b9e06e6d316388f630e668970951532526af56d662fa00701467c42a529d6c7d209d2f3b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJiBAEBCABMBQJTpxn8RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+iQJiBAEBCABMBQJUdtgRRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
 MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7PNaD/9WPqHusj0IxpL6akqp33hpAJaKJTsVt887oQywKiWmC3AfMbYRzSMFXuSd
-G+CkP9dFDvfNHxn0ybPndlBaVF62OJpjpQ+hjgI9DbNv8yS6GromYEB2LztmLem5
-0JcOj1i3NTUyBO9/Oc1kzIPP5JNUzxAJ5R2qdFITJUvzG0ClJ0XDSe/agHROKYid
-4t9pW4pox4W942C248iYtzj/UfBDJ52U2zOPn0b9ihI8hUQpVWTE3ZARiretwWwc
-sAEf0NRrRVbBYiptnouvwspZiNDvlgzbC4AsiO0TiViBiMRKjWYQ7Q6Qh4/0ZNoZ
-aJQyrALCAvdw3dQSUEugVzItyckolppFfMhSN3V5A4piCwXKpGjvgXpZ1UxvzBZj
-3sl4EdNuUeEaDYREzbBPFVTiIVSz3JVbKJjTGiULQS7n2jL39t6mPls94pW7NvYu
-zzuSTVcO3Yh/A6AkYPVG/9ww4q8QqXyGK+VzIftzx619pRw39bqnMTsy56pCyBAO
-TjFiJpB+fL1bW7VKV3KZhYczdgIo36hWRNpHLz7qXTq4tKMsrsSlk+xmt5GbGnfr
-9JZ4UPDweC/N5XtOdDBKBj2ern815kD/CIgJnuQiL0CX7eMeZ5RoRxwBDv1JYgkR
-zQNIj3Or5L1i6CPYpZn5s0XTJ17NijDI7peOFStzDRtiLsyc2Q==
-=CLm/
+7DuwEACWSfurkXtxsvvmYcCFYuZ+a00CfGnZ77a6N5m3Bf+pDfGFNH1uTYORb7lj
+hZJN9gvx5sBA9jSwkHkiIKgxOIiFVYjY7eJukQlcxYti4IOsRyZoRh6zrMknUADf
+XmH6uNOvdckgNA0CNGCf08+Fg3a/CIciAabtthgnwCDQze0xolm+x/IbBocu923f
+UlXuHtQ9h64RxlkaeglZ0KJG5D5qTbFCQRKFJNn9tcDMZrHQ66RfXU21t4Tub2QW
+ZmsfFE4c/nCg4le7rVawecsB5C09Gu/FTMlJhxO20W5fIF0S5+2uGcpkPMU72bDU
+25yseYnq1XSa95f9WCvKARgEBwx/cNCJxbLKYZDu63sZig4Y/NvOLi3Yx2ag7LlH
+dwb+xsxEKabOgtWYE/SHfN0YbTxe2HOnelvZjlVaonw7ToYjIxFtEr83PTDmB+Cp
+0mm1bpHgn/9yti9i1NUBl6O0BYIiVi6kFN+hM11dbM6fFpZyTlOSnldSivV+D5GK
+Z3H0OA8umG7sqgzeXHZagUPF2VDsFhhLW9NcEvdJ3igFc6IvO4f6iRnekaIb8/w3
+fVnbAlDdhGjxwzawAyKZTOyyhFxGGP6OaG7TsNb0RB094spNhEfv2kGMsj2JNRlR
+aB2noLn6GC9WFUvRmgvGLCXmz2b4iDH3ZqSM99PonC5ey8Xrww==
+=y998
 -----END PGP SIGNATURE-----
