@@ -1,6 +1,11 @@
 # ChangeLog for app-office/kmymoney
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney/ChangeLog,v 1.53 2014/06/22 18:01:30 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney/ChangeLog,v 1.54 2014/11/27 07:51:24 kensington Exp $
+
+*kmymoney-4.7.1 (27 Nov 2014)
+
+  27 Nov 2014; Michael Palimaka <kensington@gentoo.org> +kmymoney-4.7.1.ebuild:
+  Version bump wrt bug #530794.
 
 *kmymoney-4.6.6 (22 Jun 2014)
 
